Ajout d'un controlleur et d'une page pour la liste des biens

--- a/SiteAgenceImmobilière/templates/base.html.twig
+++ b/SiteAgenceImmobilière/templates/base.html.twig
@@ -17,7 +17,7 @@
             <ul class="navbar-nav mr-auto">
             
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ 'estateList' }}">Liste des biens</a>
+                    <a class="nav-link" href="{{ path('estate_list') }}">Liste des biens</a>
                 </li>
                 
             </ul>
