--- a/SiteAgenceImmobiliere/templates/estate/index.html.twig
+++ b/SiteAgenceImmobiliere/templates/estate/index.html.twig
@@ -4,8 +4,24 @@
 
 {% block body %}
 
-<div class="container mt-4">
+<div class="container mt-3 text-center">
     <h1>Liste des biens</h1>
+</div>
+
+<div class="row flex">
+    {% for estate in estates %}
+        <div class="col-4">
+            <div class="card">
+                <div class= "card-body">
+                    <h5 class="card-title">
+                        <a href="#">{{ estate.title}}</a>
+                    </h5>
+                    <p class="card-text">{{ estate.city}} ({{estate.postalCode}})</p>
+                    <div class="text-primary" style="font-weight: bold; font-size: 2rem;">{{ estate.formattedPrice}} €</div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 </div>
 
 {% endblock %}
