Révision de l'affichage des vues

--- a/SiteAgenceImmobiliere/templates/home/home.html.twig
+++ b/SiteAgenceImmobiliere/templates/home/home.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Agence Immobilière{% endblock %}
+{% block title %}Agence immobilière Chez Steph{% endblock %}
 
 {% block body %}
 
 <div class="jumbotron text-center">
-    <h1>Bienvenue sur Agence Immobilière</h1>
+    <h1>Bienvenue sur l' agence immobilière Chez Steph</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
