--- a/SiteAgenceImmobiliere/templates/estates/list.html.twig
+++ b/SiteAgenceImmobiliere/templates/estates/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des biens{% endblock %}
+{% block title %}Liste des biens Chez Steph{% endblock %}
 
 {% block body %}
 
@@ -8,13 +8,13 @@
     <h1>Liste des biens</h1>
 </div>
 
-<div class="row flex">
+<div class="row flex justify-content-around">
     {% for estate in estates %}
-        <div class="col-4">
-            <div class="card">
+        <div class="col-4 mt-4">
+            <div class="card  ml-2 mr-2">
                 <div class= "card-body">
                     <h5 class="card-title">
-                        <a href="{{ path('estateShow', {id: estate.id, slug: estate.slug}) }}">{{ estate.title}}</a>
+                        <a href="{{ path('estateShow', {id: estate.id}) }}">{{ estate.title}}</a>
                     </h5>
                     <p class="card-text">{{ estate.city}} ({{estate.postalCode}})</p>
                     <div class="text-primary" style="font-weight: bold; font-size: 2rem;">{{ estate.formattedPrice}} €</div>
