--- a/SiteAgenceImmobiliere/templates/admin/edit.html.twig
+++ b/SiteAgenceImmobiliere/templates/admin/edit.html.twig
@@ -6,6 +6,9 @@
 
 <div class="container mt-4">
     <h1>Modifier le bien</h1>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+    {{ form_end(form) }}
 </div>
 
 {% endblock %}
