Ajout d'un formulaire pour la modification des bien

--- a/SiteAgenceImmobiliere/templates/admin/edit.html.twig
+++ b/SiteAgenceImmobiliere/templates/admin/edit.html.twig
@@ -8,6 +8,7 @@
     <h1>Modifier le bien</h1>
     {{ form_start(form) }}
         {{ form_widget(form) }}
+        <button class="btn btn-primary">Modifier</button>
     {{ form_end(form) }}
 </div>
 
