route + form + view for add estate

--- a/SiteAgenceImmobiliere/templates/admin/list.html.twig
+++ b/SiteAgenceImmobiliere/templates/admin/list.html.twig
@@ -25,5 +25,8 @@
         </tbody>
     </table>
 </div>
+<div class="container mt-4 ">
+    <a href="{{ path('estateNew') }}" class="btn btn-primary">Créer</a>
+</div>
 
 {% endblock %}
