--- a/SiteAgenceImmobiliere/templates/admin/edit.html.twig
+++ b/SiteAgenceImmobiliere/templates/admin/edit.html.twig
@@ -6,27 +6,7 @@
 
 <div class="container mt-4">
     <h1>Modifier le bien</h1>
-    {{ form_start(form) }}
-        <div class="row">
-            <div class="col-md-4">{{ form_row(form.title) }}</div>
-            <div class="col-md-4">{{ form_row(form.surface) }}</div>
-            <div class="col-md-4">{{ form_row(form.price) }}</div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">{{ form_row(form.rooms) }}</div>
-            <div class="col-md-2">{{ form_row(form.bedrooms) }}</div>  
-            <div class="col-md-2">{{ form_row(form.heat) }}</div>  
-            <div class="col-md-2">{{ form_row(form.floor) }}</div> 
-        </div>
-        <div class="row">
-            <div class="col-md-5">{{ form_row(form.address) }}</div>
-            <div class="col-md-5">{{ form_row(form.city) }}</div>
-            <div class="col-md-5">{{ form_row(form.postal_code) }}</div>
-            <div class="col-md-5">{{ form_row(form.sold) }}</div>
-        </div>
-        {{ form_widget(form) }}
-        <button class="btn btn-primary">Modifier</button>
-    {{ form_end(form) }}
+    {{ include ('admin/form.html.twig', {button: 'Valider'}) }}
 </div>
 
 
