--- a/SiteAgenceImmobiliere/templates/home/home.html.twig
+++ b/SiteAgenceImmobiliere/templates/home/home.html.twig
@@ -8,5 +8,7 @@
     <h1>Bienvenue sur l' agence immobilière Chez Steph</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
+<div class="container" style="background-image:url('{{ asset('assets/back.jpg') }}')">
+</div>
 
 {% endblock %}
